--- a/style.css
+++ b/style.css
@@ -3,23 +3,37 @@ ul {
 }
 
 li {
-    color: purple;
+    color: black;
 }
 
 button {
-    width: 15rem;
+    width: 20rem;
     height: 10rem;
     font-size: 25px;
-    background-color: aqua;
+    background-color: #aeaeae;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    border-radius: 20px;
 }
 
+.button_container {
+    border: 2px solid red;
+    display: flex;
+    /* flex-direction: row-reverse; */
+    justify-content: space-around;
+
+}
+
+
 button:hover {
-    background-color: rgb(0, 195, 195);
+    background-color: #7b7b7b;
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 button:active {
-    background-color: rgb(0, 195, 195);
+    background-color: #7b7b7b;
     box-shadow: 0 5px #666;
     transform: translateY(5px);
 }
